--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <div class="main-content">
-        <h1>Best Selling Products</h1>
+        <h2>Best Selling Products</h2>
 
         <div class="cards">
           <div class="card">
@@ -29,7 +29,8 @@
                 <h3>100% Bio Honey</h3>
                 <p>Italian, not treated</p>
               </div>
-              <div class="prezzo"><p>7$/Kg</p></div>
+              <p class="prezzo">7$/Kg</p>
+
               <div class="bottone">
                 <button><strong>Add to cart</strong></button>
               </div>
@@ -42,7 +43,8 @@
                 <h3>100% Bio Honey</h3>
                 <p>Italian, not treated</p>
               </div>
-              <div class="prezzo"><p>7$/Kg</p></div>
+              <p class="prezzo1">7$/Kg</p>
+
               <div class="bottone">
                 <button><strong>Add to cart</strong></button>
               </div>
@@ -55,7 +57,8 @@
                 <h3>100% Bio Honey</h3>
                 <p>Italian, not treated</p>
               </div>
-              <div class="prezzo"><p>7$/Kg</p></div>
+              <p class="prezzo">7$/Kg</p>
+
               <div class="bottone">
                 <button><strong>Add to cart</strong></button>
               </div>
@@ -68,7 +71,8 @@
                 <h3>100% Bio Honey</h3>
                 <p>Italian, not treated</p>
               </div>
-              <div class="prezzo"><p>7$/Kg</p></div>
+              <p class="prezzo1">7$/Kg</p>
+
               <div class="bottone">
                 <button><strong>Add to cart</strong></button>
               </div>
@@ -77,5 +81,35 @@
         </div>
       </div>
     </main>
+    <footer>
+      <h2>Last News</h2>
+      <div class="bigBox">
+        <h3>Our delicious honey</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas laborum nam, illum voluptatem repellat assumenda
+          praesentium atque sequi aliquid tenetur, magni laboriosam sunt? Deleniti quia voluptates ut ullam facere unde.
+          Officia explicabo excepturi modi in maiores quae perspiciatis! Perferendis, quod nesciunt accusantium iusto
+          incidunt maxime fuga dolores ipsa enim dolorem? Soluta vero possimus recusandae dolore quae ipsam esse
+          aspernatur doloremque! Accusamus, consectetur, quas magni ratione suscipit, modi quasi quam rerum earum
+          placeat est minima labore impedit laborum iste ducimus dolores amet numquam voluptate. Accusamus quam nemo
+          possimus placeat, cum et? Eligendi sapiente quaerat optio recusandae iure delectus. Officia sint aut quod
+          delectus veritatis est quas autem ducimus velit excepturi iure quos a ipsam ab perferendis cumque sequi, id
+          sunt voluptas! Quam ab, aspernatur at aliquam provident cupiditate? Consequuntur, temporibus quasi? Laboriosam
+          obcaecati praesentium non eveniet sint. Animi quae, laboriosam illo, rerum a quidem quos exercitationem
+          reprehenderit ea praesentium laudantium magnam? Nulla iste harum iure est. Consectetur excepturi est facere,
+          eligendi modi voluptatem reiciendis animi harum aperiam omnis eius, numquam saepe iure aut alias nihil?
+          Adipisci a laboriosam distinctio nulla numquam. Mollitia aliquid doloremque harum quam et recusandae excepturi
+          eius in cumque autem! Delectus optio iure iusto soluta quae, non blanditiis cumque ex officia ipsa esse et
+          provident suscipit, fuga nihil? Alias modi, ex veritatis aut debitis nam obcaecati beatae incidunt laborum
+          itaque exercitationem error, provident laboriosam recusandae sapiente temporibus ad rerum porro numquam
+          cupiditate esse eius magni et. Voluptates, totam. Dignissimos at totam, labore enim delectus nulla
+          perspiciatis amet possimus, id modi voluptates iure sunt temporibus, pariatur doloribus dolor aperiam. Rerum
+          eos dolore hic, accusamus ullam odit consequuntur saepe dolor. Pariatur impedit adipisci qui obcaecati eaque
+          voluptatum aut architecto sed est cupiditate quidem ex hic saepe, quia dolor officia ea in, possimus corrupti
+          eum facere consectetur. Ipsum asperiores nulla neque.
+        </p>
+        <img src="assets/imgs/honey.jpg" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
